修改字体颜色和大小样式

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -31,7 +31,8 @@ h2, h3 {
 }
 a, a:link, a:active {
   text-decoration: none;
-  color: #3fa757;
+  font-size: 20px;
+  #color: #3fa757;
 }
 a:hover {
   color: #B3B3B3;
@@ -88,7 +89,7 @@ div.col-sm-3 {
   color: #666;
 }
 div.col-sm-3 strong {
-  font-size: 16px;
+  font-size: 22px;
   color: #4A4A4A;
   font-weight: normal;
 }
